--- a/resources/sass/base/_color.scss
+++ b/resources/sass/base/_color.scss
@@ -53,4 +53,5 @@ $brownish-grey-three: #5f5c5c;
 $black-three: #000000;
 $coolGray: #a7a8aa;
 $greyishBrownTwo: #4a4a4a;
-$brightBlue: #0068ff
+$brightBlue: #0068ff;
+$warmGreyFive: #7a7777;
