--- a/resources/sass/atoms/_separator.scss
+++ b/resources/sass/atoms/_separator.scss
@@ -1,4 +1,5 @@
 @import "../base/color";
+
 .line {
     width: 100%;
     height: 1px;
@@ -10,6 +11,7 @@
     content: " | ";
     padding: 0 10px;
 }
+
 .separacion1:after {
     content: " | ";
     padding-left: 70px;
@@ -20,14 +22,34 @@
     margin-right: 10px;
     padding-right: 15px;
 }
+
 .bb-r {
     border-bottom: 3px solid $beige;
     margin-bottom: 10px;
 }
+
 .separationhr {
     background: $lightpink;
     border: 2px solid $lightpink;
 }
+
 .bor {
     border: dashed 2px $silver;
+}
+
+
+.border-t {
+    border-top: 3px solid #979797;
+}
+
+.border-b {
+    border-bottom: 3px solid #979797;
+}
+
+.border-r {
+    border-right: 3px solid #979797;
+}
+
+.border-l {
+    border-left: 3px solid #979797;
 }
