--- a/public/css/app.css
+++ b/public/css/app.css
@@ -71,7 +71,7 @@ body {
   display: none;
 }
 
-[dir="rtl"] .slick-slide {
+[dir=rtl] .slick-slide {
   float: right;
 }
 
@@ -177,7 +177,7 @@ body {
   left: -25px;
 }
 
-[dir="rtl"] .slick-prev {
+[dir=rtl] .slick-prev {
   left: auto;
   right: -25px;
 }
@@ -186,7 +186,7 @@ body {
   content: "\2190";
 }
 
-[dir="rtl"] .slick-prev:before {
+[dir=rtl] .slick-prev:before {
   content: "\2192";
 }
 
@@ -194,7 +194,7 @@ body {
   right: -25px;
 }
 
-[dir="rtl"] .slick-next {
+[dir=rtl] .slick-next {
   left: -25px;
   right: auto;
 }
@@ -203,7 +203,7 @@ body {
   content: "\2192";
 }
 
-[dir="rtl"] .slick-next:before {
+[dir=rtl] .slick-next:before {
   content: "\2190";
 }
 
@@ -3199,23 +3199,23 @@ hr {
   letter-spacing: normal;
 }
 
-input[type="radio"]:checked + .a-btn-check:before {
+input[type=radio]:checked + .a-btn-check:before {
   content: "\2713";
   font-size: 30px;
   color: #009245;
 }
 
-input[type="radio"]:checked + .hombre-estilo {
+input[type=radio]:checked + .hombre-estilo {
   background: #03ad50;
   color: #ffffff;
   border: none;
 }
 
-input[type="checkbox"] {
+input[type=checkbox] {
   display: none;
 }
 
-input[type="radio"] {
+input[type=radio] {
   display: none;
 }
 
@@ -3252,13 +3252,13 @@ option:checked + .roles {
   border: none;
 }
 
-input[type="radio"]:checked + .mujer-estilo {
+input[type=radio]:checked + .mujer-estilo {
   background: #03ad50;
   color: #ffffff;
   border: none;
 }
 
-input[type="radio"]:checked + .mujer-estilo1 {
+input[type=radio]:checked + .mujer-estilo1 {
   background: #03ad50;
   color: #ffffff;
   border: none;
@@ -3275,7 +3275,7 @@ input[type="radio"]:checked + .no-estilo {
     border: none;
 }*/
 
-input[type="radio"]:checked + .switch-label {
+input[type=radio]:checked + .switch-label {
   background-color: #0097a9;
   color: #ffffff;
   border: none;
@@ -3286,13 +3286,13 @@ input[type="radio"]:checked + .switch-label {
   font-family: "Montserrat-SemiBold";
 }
 
-input[type="radio"]:checked + .si-estilo1 {
+input[type=radio]:checked + .si-estilo1 {
   background-color: #4c4b4b;
   color: #ffffff;
   border: none;
 }
 
-input[type="radio"]:checked + .no-estilo1 {
+input[type=radio]:checked + .no-estilo1 {
   background-color: #4c4b4b;
   color: #ffffff;
   border: none;
@@ -3714,7 +3714,7 @@ input[type="radio"]:checked + .no-estilo1 {
   cursor: pointer;
 }
 
-.list1:not([class*="col-"]):not([class*="form-control"]):not(.input-group-btn) {
+.list1:not([class*=col-]):not([class*=form-control]):not(.input-group-btn) {
   width: 100% !important;
 }
 
@@ -3804,7 +3804,7 @@ div .bootstrap-select > .dropdown-toggle:focus {
   box-sizing: border-box;
 }
 
-.listcinema:not([class*="col-"]):not([class*="form-control"]):not(.input-group-btn) {
+.listcinema:not([class*=col-]):not([class*=form-control]):not(.input-group-btn) {
   width: 100% !important;
 }
 
@@ -4063,8 +4063,8 @@ div .bootstrap-select > .dropdown-toggle:focus {
 
 .veri {
   /*display: none;
-    position: absolute;
-    top: -172px;*/
+  position: absolute;
+  top: -172px;*/
   display: none;
   position: absolute;
   left: 30px;
@@ -4080,8 +4080,8 @@ div .bootstrap-select > .dropdown-toggle:focus {
 
 .edita {
   /*display: none;
-    position: absolute;
-    top: 32px;*/
+  position: absolute;
+  top: 32px;*/
   display: none;
   position: absolute;
   left: 30px;
@@ -4097,8 +4097,8 @@ div .bootstrap-select > .dropdown-toggle:focus {
 
 .borra {
   /*display: none;
-    position: absolute;
-    top: 66px;*/
+  position: absolute;
+  top: 66px;*/
   display: none;
   position: absolute;
   left: 30px;
@@ -5870,6 +5870,168 @@ ul {
 .modal-programming-landing .modal-body {
   padding: 48px;
 }
+
+/** ** ** */
+
+.modal-encabezado {
+  width: 1200px;
+  height: 383px;
+  background: #ffffff;
+  margin: auto;
+  padding-top: 23px;
+}
+
+.modal-url {
+  width: 949px;
+  height: 446px;
+  background: #ffffff;
+  margin: auto;
+}
+
+.modal-url p {
+  font-size: 36px;
+  color: #808080;
+  margin-left: 89px;
+  margin-bottom: 0;
+  padding-top: 87px;
+}
+
+.p-text-bold-black {
+  font-size: 18px;
+  color: #161515;
+  font-weight: 600;
+  margin-left: 47px;
+  margin-bottom: 0;
+}
+
+.p-title-black {
+  font-size: 24px;
+  color: #4a4a4a;
+  text-align: center;
+  font-weight: 800;
+  margin-top: 5px;
+}
+
+hr {
+  background: #e2e2e2;
+  height: 1.5px !important;
+  width: 92%;
+}
+
+.content {
+  display: flex;
+  align-items: center;
+  margin-left: 45px;
+  margin-top: 30px;
+}
+
+.img-content {
+  width: 290px;
+  height: 70px;
+  display: inline-block;
+}
+
+.img-content img {
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+}
+
+.txt-content {
+  display: inline-block;
+  box-shadow: 1px 1px 5px #a4a4a4;
+  margin-left: 30px;
+  padding-right: 40px;
+}
+
+.txt-content p {
+  font-size: 32px;
+  color: #4a4a4a;
+  margin-bottom: 0;
+  font-weight: 800;
+  padding: 5px 8px;
+}
+
+.txt-content span {
+  font-size: 32px;
+  color: #da291c;
+  margin-bottom: 0;
+  font-weight: 800;
+  padding: 5px 8px;
+  display: block;
+}
+
+.programacion-content {
+  border: 2px solid #da291c;
+  background: #da291c;
+  margin-left: 38px;
+  padding: 13px 0;
+  border-radius: 50px;
+}
+
+.url-content {
+  display: block;
+  float: right;
+  width: 250px;
+  margin-right: 44px;
+  margin-top: 28px;
+}
+
+.url-modal-content {
+  width: 774px;
+  margin-left: 89px;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+.input-url {
+  width: 200px;
+  padding: 8px;
+  color: #444;
+  border: 1px solid #ffffff;
+  box-shadow: 1px 2px 4px #a4a4a4;
+  font-weight: bold;
+  float: right;
+}
+
+.input-url-modal {
+  width: 686px;
+  padding: 11px;
+  color: #444;
+  border: 1px solid #ffffff;
+  box-shadow: 1px 2px 4px #a4a4a4;
+  font-weight: bold;
+  float: right;
+  font-size: 21px;
+}
+
+.modal-footer {
+  width: 100%;
+  border-top: 0 !important;
+}
+
+.error {
+  color: #ff0007;
+  font-size: 18px;
+  font-weight: bold;
+  margin-top: 10px;
+  display: block;
+}
+
+.btn-tomato,
+.btn-tomato:hover {
+  color: #fff;
+  font-size: 18px;
+  font-weight: bold;
+  padding: 16px 35px;
+}
+
+.btn-content button {
+  color: #0097a9;
+  font-weight: bold;
+}
+
+/** ** ** */
 
 .dropdown-menu {
   width: 100% !important;
