--- a/resources/sass/atoms/_text.scss
+++ b/resources/sass/atoms/_text.scss
@@ -77,7 +77,10 @@
     font-family: $MontserratBold;
     color: $white;
 }
-
+.a-text-bold-bright-cyan{
+    font-family: $MontserratBold;
+    color:$bright-cyan;
+}
 .a-text-bold-teal {
     color: $teal;
     font-family: $MontserratBold;
