--- a/resources/sass/base/_color.scss
+++ b/resources/sass/base/_color.scss
@@ -55,3 +55,7 @@ $coolGray: #a7a8aa;
 $greyishBrownTwo: #4a4a4a;
 $brightBlue: #0068ff;
 $warmGreyFive: #7a7777;
+$cobait:#1f2887;
+$bright-cyan:#3cc1ff;
+$pink:#ff00d2;
+$dark-indigo:#12195e;
