--- a/resources/sass/organisms/_container.scss
+++ b/resources/sass/organisms/_container.scss
@@ -384,3 +384,18 @@ iframe {
     margin-top: 30px;
     margin-bottom: 30px;
 }
+.container-promo{
+
+    border-radius: 12px;
+    background-color:$cobait;
+}
+.container-promotitle{
+    background-color:$cobait;
+
+}
+.container-title{
+    background-color: $dark-indigo;
+}
+.container-width{
+        width: -webkit-fill-available;
+}
