--- a/resources/sass/molecules/_modal.scss
+++ b/resources/sass/molecules/_modal.scss
@@ -1,3 +1,6 @@
+a:hover {
+    text-decoration: none !important;
+}
 .modal-edit-usersfront-content {
     width: 567px;
     margin: auto;
@@ -38,27 +41,81 @@
     }
 }
 
-   /** ** ** */
-   .modal-encabezado {
+/** ** ** */
+
+.modal-promo-claro {
+    width: 952px;
+    height: 826px;
+    background-color: $white;
+    margin: 75px auto 0 auto;
+    padding-top: 24px;
+    text-align: center;
+}
+
+.modal-promo-claro p {
+    color: $black;
+    margin-left: 49px;
+    font-weight: 600;
+    // font-family: $MontserratBold;
+    text-align: left;
+}
+
+.modal-promo-claro span {
+    color: $greyishBrownTwo;
+    font-weight: 800;
+    display: block;
+    margin: 9px 0 22px;
+    font-weight: bold;
+    // font-family: $MontserratBlack;
+}
+
+.hr-promo {
+    width: 89%;
+    height: 2px;
+    border: solid 2px $lightpink;
+}
+
+.img-content{
+    width: 775px;
+    height: 442px;
+}
+
+#img-promo-claro img {
+    border: 28px solid $selecred;
+    border-radius: 10px;
+    top: 12px;
+    object-fit: cover;
+    position: absolute;
+    left: 0;
+} 
+
+#img-header-claro img {
+    top: 0;
+    object-fit: cover;
+    position: absolute;
+    left: 0;
+} 
+
+.btn-content button {
+    color: $waterblue;
+    background-color: $white;
+    cursor: pointer;
+    border: 2.5px solid $waterblue;
+    font-weight: bold;
+}
+
+.btn-content-promo button {
+    margin-top: 17%;
+}
+
+/** ** ** */
+
+.modal-header-claro {
     width: 1200px;
     height: 383px;
     background: $white;
-    margin: auto;
+    margin: 75px auto 0 auto;
     padding-top: 23px;
-}
-.modal-url {
-    width: 949px;
-    height: 446px; 
-    background: $white;
-    margin: auto;
-}
-
-.modal-url p {
-    font-size: 36px;
-    color: $warm-grey-three;
-    margin-left: 89px;
-    margin-bottom: 0;
-    padding-top: 87px;
 }
 
 .p-text-bold-black {
@@ -77,12 +134,6 @@
     margin-top: 5px;
 }
 
-hr {
-    background: #e2e2e2;
-    height: 1.5px !important;
-    width: 92%;
-}
-
 .content {
     display: flex;
     align-items: center;
@@ -90,14 +141,13 @@ hr {
     margin-top: 30px;
 }
 
-.img-content {
+.img-content-header {
     width: 290px;
     height: 70px;
     display: inline-block;
-
 }
 
-.img-content img {
+.img-content-header img {
     width: 100%;
     height: 100%;
     cursor: pointer;
@@ -194,6 +244,126 @@ hr {
 .btn-content button{
     color: $teal;
     font-weight: bold;
+}	
+
+/** ** URL ** **/
+
+.modal-url {
+    width: 949px;
+    height: 446px; 
+    background: $white;
+    margin: auto;
 }
 
-    /** ** ** */
+.modal-url p {
+    font-size: 36px;
+    color: $warm-grey-three;
+    margin-left: 89px;
+    margin-bottom: 0;
+    padding-top: 87px;
+}
+
+/** ** TITULO ** **/
+.modal-title {
+    width: 952px;
+    height: 328px; 
+    background: $white;
+    margin: 75px auto 0 auto;
+    text-align: center;
+    padding-top: 24px;
+}
+
+.modal-title p{
+    color: #4a4a4a;
+    font-weight: 600;
+    font-weight: bold;
+}
+
+.title-modal-content {
+    width: 634px;
+    height: 111px;
+    margin: 29px auto 17px;
+    background: $selecred;
+    padding: 11px 12px;
+}
+
+.input-title {
+    background: #c06760;
+    border: none;
+    border-radius: 5px;
+    width: 100%;
+    color: $white;
+    height: 54px;
+    font-weight: 800;
+    padding: 0 0 0 12px;
+    font-size: 36px;
+}
+
+.input-sub-title {
+    background: #c06760;
+    border: none;
+    border-radius: 5px;
+    width: 100%;
+    color: $white;
+    height: 26px;
+    font-weight: 600;
+    padding: 0 0 0 12px;
+    margin-top: 11px;
+}
+
+/** ** BANNER ** **/
+.modal-banner-claro {
+    width: 1344px;
+    height: 708px; 
+    background: $white;
+    margin: 75px auto 0 auto;
+    padding-top: 19px;
+}
+
+.modal-banner-p {
+    color: $black;
+    margin-left: 77px;
+    font-weight: 600;
+    text-align: left;
+}
+
+.modal-banner-claro span {
+    color: $greyishBrownTwo;
+    font-weight: 800;
+    display: block;
+    margin: 6px 0 22px;
+    font-weight: bold;
+    text-align: center;
+}
+
+.hr-banner {
+    width: 88%;
+    height: 2px;
+    border: solid 2px $lightpink;
+}
+
+.content-calendario {
+    margin-left: 77px;
+    margin-right: 77px;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.img-content-banner {
+    width: 1191px;
+    height: 359px;
+    margin-left: 77px;
+}
+
+.img-content-banner img {
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+}
+
+#img-banner-claro img {
+    top: 12px;
+    object-fit: cover;
+    position: absolute;
+    left: 0;
+} 
