Modales terminados de concert channel

--- a/resources/sass/organisms/_container.scss
+++ b/resources/sass/organisms/_container.scss
@@ -389,6 +389,18 @@ iframe {
     border-radius: 12px;
     background-color:$cobait;
 }
+.container-promo-cinema{
+
+    border-radius: 12px;
+    background-color:$off-yellow;
+}
+
+.container-promotitle-cinema{
+    background-color:$light-gold;
+    border: $light-gold;
+    box-shadow: 0 2px 4px 0 $black-two;
+
+}
 .container-promotitle{
     background-color:$cobait;
 
