--- a/resources/sass/molecules/_modal.scss
+++ b/resources/sass/molecules/_modal.scss
@@ -45,7 +45,7 @@ a:hover {
 
 .modal-promo-claro {
     width: 952px;
-    height: 826px;
+    height: 800px;
     background-color: $white;
     margin: 75px auto 0 auto;
     padding: 24px 49px 28px 49px;
@@ -73,8 +73,8 @@ a:hover {
 
 .img-content-promo{
     width: 824px;
-    height: 496px;
-    margin: auto;
+    height: 450px;
+    margin: 50px auto 0 auto;
 }
 
 .img-promo-claro {
@@ -85,19 +85,8 @@ a:hover {
     align-items: center;
 }
 
-#padre{
+#back-promo-claro{
     position:relative;
-    background-color: green;
-  }
-  
-  #uno {
-    position: absolute;
-    background-color: red;
-    top: 0;
-    left: 0;
-    right: 0;
-    margin: 0 auto;
-    width: 20px;
   }
 
 .add-file {
@@ -111,12 +100,17 @@ a:hover {
     width: 20%;
 }
 
+.add-file span {
+    background: #fff;
+    margin: 0 15px;
+    border-radius: 25px;
+}
+
  .img-back-promo {
      border: 28px solid $selecred;
      border-radius: 10px;
      width: 100%;
-     margin-top: 16px;
-     top: 12px;
+     top: 10px;
     object-fit: cover;
      position: absolute;
      left: 0;
@@ -142,20 +136,20 @@ a:hover {
 }
 
 /** ** ** */
-
 .modal-header-claro {
     width: 1200px;
     height: 383px;
     background: $white;
     margin: 75px auto 0 auto;
     padding-top: 23px;
+    padding-left: 47px;
+    padding-right: 47px;
 }
 
 .p-text-bold-black {
     font-size: 18px;
     color: $black;
     font-weight: 600;
-    margin-left: 47px;
     margin-bottom: 0;
 }
 
@@ -170,7 +164,6 @@ a:hover {
 .content {
     display: flex;
     align-items: center;
-    margin-left: 45px;
     margin-top: 30px;
 }
 
@@ -190,39 +183,46 @@ a:hover {
     display: inline-block;
     box-shadow: 1px 1px 5px #a4a4a4;
     margin-left: 30px;
-    padding-right: 40px;
 }
 
-.txt-content p {
+.inp-text-modal-1 {
     font-size: 32px;
     color: $greyishBrownTwo;
     margin-bottom: 0;
-    font-weight: 800;
-    padding: 5px 8px;
+    font-weight: bold;
+    padding: 5px 0px 5px 8px;
+    border: none;
+    width: 169px;
 }
 
-.txt-content span {
+.inp-text-modal-2 {
     font-size: 32px;
     color: $selecred;
     margin-bottom: 0;
-    font-weight: 800;
-    padding: 5px 8px;
-    display: block;
+    font-weight: bold;
+    padding: 5px 0px 5px 8px;
+    border: none;
+    width: 287px;
 }
 
-.programacion-content {
-    border: 2px solid $selecred;
+.inp-text-modal-3 {
+    font-size: 18px;
+    color: $white;
+    margin-bottom: 0;
+    font-weight: bold;
+    text-align: center;
+    border: none;
+    width: 259px;
+    border-radius: 50px;
     background: $selecred;
     margin-left: 38px;
     padding: 13px 0;
-    border-radius: 50px;
 }
 
 .url-content {
     display: block;
     float: right;
     width: 250px;
-    margin-right: 44px;
     margin-top: 28px;
 }
 
@@ -285,7 +285,7 @@ a:hover {
     width: 949px;
     height: 446px; 
     background: $white;
-    margin: auto;
+    margin: 10% auto 0;
 }
 
 .modal-url p {
@@ -350,12 +350,11 @@ a:hover {
     height: 708px; 
     background: $white;
     margin: 75px auto 0 auto;
-    padding-top: 19px;
+    padding: 19px 77px 0 77px;
 }
 
-.modal-banner-p {
+.text-banner-p {
     color: $black;
-    margin-left: 77px;
     font-weight: 600;
     text-align: left;
 }
@@ -369,37 +368,65 @@ a:hover {
     text-align: center;
 }
 
-.hr-banner {
-    width: 88%;
-    height: 2px;
-    border: solid 2px $lightpink;
-}
-
 .content-calendario {
-    margin-left: 77px;
-    margin-right: 77px;
     justify-content: space-between;
     flex-wrap: wrap;
+    padding-top: 5px;
 }
 
 .img-content-banner {
     width: 1191px;
     height: 359px;
-    margin-left: 77px;
 }
 
-.img-content-banner img {
-    width: 100%;
-    height: 100%;
-    cursor: pointer;
-}
-
-#img-banner-claro img {
+.img-claro-back {
     top: 12px;
     object-fit: cover;
     position: absolute;
     left: 0;
+    width: 100%;
+    height: 100%;
 } 
+
+.img-add-photo {
+    top: 34%;
+    object-fit: cover;
+    position: absolute;
+    left: 47%;
+    cursor: pointer;
+    width: 8%;
+}
+
+.text-add-photo {
+    top: 64%;
+    position: absolute;
+    left: 45%;
+    color: #fff;
+    background: #fff;
+    padding: 5px 15px;
+    border-radius: 25px;
+}
+
+.arrow-modal-right {
+    position: absolute;
+    left: -5%;
+    width: 40px;
+    top: 40%;
+    cursor: pointer;
+    transform: rotate(-180deg);
+}
+
+.arrow-modal-left {
+    position: absolute;
+    right: -5%;
+    width: 40px;
+    top: 40%;
+    cursor: pointer;
+}
+
+.btn-modal-progra {
+    bottom: 0;
+}
 
 .day-style {
     display: flex;
