--- a/resources/sass/base/_color.scss
+++ b/resources/sass/base/_color.scss
@@ -61,6 +61,6 @@ $pink:#ff00d2;
 $dark-indigo:#12195e;
 $off-yellow:#f5dd30;
 $light-gold:#ffeb5a;
-
-
+$off-yellow-two:#f4f72e;
+$turquoise-blue:#00abc0;
 
