--- a/resources/sass/organisms/_container.scss
+++ b/resources/sass/organisms/_container.scss
@@ -408,6 +408,10 @@ iframe {
 .container-title{
     background-color: $dark-indigo;
 }
+.container-title-cinema{
+    background-color: black;
+}
+
 .container-width{
         width: -webkit-fill-available;
 }
