--- a/public/css/app.css
+++ b/public/css/app.css
@@ -71,7 +71,7 @@ body {
   display: none;
 }
 
-[dir=rtl] .slick-slide {
+[dir="rtl"] .slick-slide {
   float: right;
 }
 
@@ -177,7 +177,7 @@ body {
   left: -25px;
 }
 
-[dir=rtl] .slick-prev {
+[dir="rtl"] .slick-prev {
   left: auto;
   right: -25px;
 }
@@ -186,7 +186,7 @@ body {
   content: "\2190";
 }
 
-[dir=rtl] .slick-prev:before {
+[dir="rtl"] .slick-prev:before {
   content: "\2192";
 }
 
@@ -194,7 +194,7 @@ body {
   right: -25px;
 }
 
-[dir=rtl] .slick-next {
+[dir="rtl"] .slick-next {
   left: -25px;
   right: auto;
 }
@@ -203,7 +203,7 @@ body {
   content: "\2192";
 }
 
-[dir=rtl] .slick-next:before {
+[dir="rtl"] .slick-next:before {
   content: "\2190";
 }
 
@@ -2983,6 +2983,11 @@ body {
   width: 200px;
 }
 
+.promo-icon {
+  width: 70px;
+  z-index: 1;
+}
+
 @font-face {
   font-family: "Montserrat-Light";
   src: url(/backoffice/public/fonts/Montserrat-Light/Montserrat-Light.eot);
@@ -3068,23 +3073,23 @@ body {
   letter-spacing: normal;
 }
 
-input[type=radio]:checked + .a-btn-check:before {
+input[type="radio"]:checked + .a-btn-check:before {
   content: "\2713";
   font-size: 30px;
   color: #009245;
 }
 
-input[type=radio]:checked + .hombre-estilo {
+input[type="radio"]:checked + .hombre-estilo {
   background: #03ad50;
   color: #ffffff;
   border: none;
 }
 
-input[type=checkbox] {
+input[type="checkbox"] {
   display: none;
 }
 
-input[type=radio] {
+input[type="radio"] {
   display: none;
 }
 
@@ -3121,13 +3126,13 @@ option:checked + .roles {
   border: none;
 }
 
-input[type=radio]:checked + .mujer-estilo {
+input[type="radio"]:checked + .mujer-estilo {
   background: #03ad50;
   color: #ffffff;
   border: none;
 }
 
-input[type=radio]:checked + .mujer-estilo1 {
+input[type="radio"]:checked + .mujer-estilo1 {
   background: #03ad50;
   color: #ffffff;
   border: none;
@@ -3144,7 +3149,7 @@ input[type="radio"]:checked + .no-estilo {
     border: none;
 }*/
 
-input[type=radio]:checked + .switch-label {
+input[type="radio"]:checked + .switch-label {
   background-color: #0097a9;
   color: #ffffff;
   border: none;
@@ -3155,13 +3160,13 @@ input[type=radio]:checked + .switch-label {
   font-family: "Montserrat-SemiBold";
 }
 
-input[type=radio]:checked + .si-estilo1 {
+input[type="radio"]:checked + .si-estilo1 {
   background-color: #4c4b4b;
   color: #ffffff;
   border: none;
 }
 
-input[type=radio]:checked + .no-estilo1 {
+input[type="radio"]:checked + .no-estilo1 {
   background-color: #4c4b4b;
   color: #ffffff;
   border: none;
@@ -3583,7 +3588,7 @@ input[type=radio]:checked + .no-estilo1 {
   cursor: pointer;
 }
 
-.list1:not([class*=col-]):not([class*=form-control]):not(.input-group-btn) {
+.list1:not([class*="col-"]):not([class*="form-control"]):not(.input-group-btn) {
   width: 100% !important;
 }
 
@@ -3673,7 +3678,7 @@ div .bootstrap-select > .dropdown-toggle:focus {
   box-sizing: border-box;
 }
 
-.listcinema:not([class*=col-]):not([class*=form-control]):not(.input-group-btn) {
+.listcinema:not([class*="col-"]):not([class*="form-control"]):not(.input-group-btn) {
   width: 100% !important;
 }
 
@@ -4014,8 +4019,8 @@ div .bootstrap-select > .dropdown-toggle:focus {
 
 .veri {
   /*display: none;
-  position: absolute;
-  top: -172px;*/
+    position: absolute;
+    top: -172px;*/
   display: none;
   position: absolute;
   left: 30px;
@@ -4031,8 +4036,8 @@ div .bootstrap-select > .dropdown-toggle:focus {
 
 .edita {
   /*display: none;
-  position: absolute;
-  top: 32px;*/
+    position: absolute;
+    top: 32px;*/
   display: none;
   position: absolute;
   left: 30px;
@@ -4048,8 +4053,8 @@ div .bootstrap-select > .dropdown-toggle:focus {
 
 .borra {
   /*display: none;
-  position: absolute;
-  top: 66px;*/
+    position: absolute;
+    top: 66px;*/
   display: none;
   position: absolute;
   left: 30px;
@@ -5209,6 +5214,17 @@ div .bootstrap-select > .dropdown-toggle:focus {
 
 .edit-date-time-title1 {
   margin-bottom: 114px;
+}
+
+#video-promo-concert {
+  display: none;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.link-url-modal {
+  z-index: 1;
 }
 
 .login-BO {
