--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,6 +14,8 @@ $slick-loader-path: "~slick-carousel/slick/"; // To add
 @import "./atoms/separator";
 @import "./atoms/spacings";
 @import "./atoms/text";
+@import "./atoms/video";
+@import "./atoms/link";
 @import "./molecules/cards";
 @import "./molecules/lists";
 @import "./molecules/nav";
