--- a/public/css/app.css
+++ b/public/css/app.css
@@ -440,6 +440,21 @@ body {
   color: white;
 }
 
+.a-text-black-Black {
+  font-family: "Montserrat-Black";
+  color: black;
+}
+
+.a-text-black-yellow-two {
+  font-family: "Montserrat-Black";
+  color: #f4f72e;
+}
+
+.a-text-black-turquiose {
+  font-family: "Montserrat-Black";
+  color: #00abc0;
+}
+
 .a-text-bold-light {
   font-family: "Montserrat-Bold";
   color: #949494;
@@ -467,6 +482,11 @@ body {
 
 .a-text-bold-tomato {
   font-family: "Montserrat-Bold";
+  color: #da291c;
+}
+
+.a-text-black-tomato {
+  font-family: "Montserrat-Black";
   color: #da291c;
 }
 
@@ -3725,22 +3745,22 @@ div .bootstrap-select > .dropdown-toggle:focus {
 }
 
 .hoy-en::-moz-placeholder {
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat-Black";
   color: #ffffff;
 }
 
 .hoy-en:-ms-input-placeholder {
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat-Black";
   color: #ffffff;
 }
 
 .hoy-en::-ms-input-placeholder {
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat-Black";
   color: #ffffff;
 }
 
 .hoy-en::placeholder {
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat-Black";
   color: #ffffff;
 }
 
@@ -3762,6 +3782,90 @@ div .bootstrap-select > .dropdown-toggle:focus {
 .concert-input-title::placeholder {
   font-family: "Montserrat-Black";
   color: #3cc1ff;
+}
+
+.hoy-en-cinema::-moz-placeholder {
+  font-family: "Montserrat-Black";
+  color: black;
+}
+
+.hoy-en-cinema:-ms-input-placeholder {
+  font-family: "Montserrat-Black";
+  color: black;
+}
+
+.hoy-en-cinema::-ms-input-placeholder {
+  font-family: "Montserrat-Black";
+  color: black;
+}
+
+.hoy-en-cinema::placeholder {
+  font-family: "Montserrat-Black";
+  color: black;
+}
+
+.cinema-input-title::-moz-placeholder {
+  font-family: "Montserrat-Black";
+  color: #da291c;
+}
+
+.cinema-input-title:-ms-input-placeholder {
+  font-family: "Montserrat-Black";
+  color: #da291c;
+}
+
+.cinema-input-title::-ms-input-placeholder {
+  font-family: "Montserrat-Black";
+  color: #da291c;
+}
+
+.cinema-input-title::placeholder {
+  font-family: "Montserrat-Black";
+  color: #da291c;
+}
+
+.cinema-title-input::-moz-placeholder {
+  font-family: "Montserrat-Black";
+  color: #f4f72e;
+}
+
+.cinema-title-input:-ms-input-placeholder {
+  font-family: "Montserrat-Black";
+  color: #f4f72e;
+}
+
+.cinema-title-input::-ms-input-placeholder {
+  font-family: "Montserrat-Black";
+  color: #f4f72e;
+}
+
+.cinema-title-input::placeholder {
+  font-family: "Montserrat-Black";
+  color: #f4f72e;
+}
+
+.cinema-title-carrusel1-input::-moz-placeholder {
+  font-family: "Montserrat-Black";
+  color: #00abc0;
+}
+
+.cinema-title-carrusel1-input:-ms-input-placeholder {
+  font-family: "Montserrat-Black";
+  color: #00abc0;
+}
+
+.cinema-title-carrusel1-input::-ms-input-placeholder {
+  font-family: "Montserrat-Black";
+  color: #00abc0;
+}
+
+.cinema-title-carrusel1-input::placeholder {
+  font-family: "Montserrat-Black";
+  color: #00abc0;
+}
+
+.input-title-cinema {
+  background-color: #2d2926;
 }
 
 .line {
@@ -4290,6 +4394,21 @@ div .bootstrap-select > .dropdown-toggle:focus {
   color: white;
 }
 
+.a-text-black-Black {
+  font-family: "Montserrat-Black";
+  color: black;
+}
+
+.a-text-black-yellow-two {
+  font-family: "Montserrat-Black";
+  color: #f4f72e;
+}
+
+.a-text-black-turquiose {
+  font-family: "Montserrat-Black";
+  color: #00abc0;
+}
+
 .a-text-bold-light {
   font-family: "Montserrat-Bold";
   color: #949494;
@@ -4317,6 +4436,11 @@ div .bootstrap-select > .dropdown-toggle:focus {
 
 .a-text-bold-tomato {
   font-family: "Montserrat-Bold";
+  color: #da291c;
+}
+
+.a-text-black-tomato {
+  font-family: "Montserrat-Black";
   color: #da291c;
 }
 
@@ -6702,6 +6826,10 @@ iframe {
 
 .container-title {
   background-color: #12195e;
+}
+
+.container-title-cinema {
+  background-color: black;
 }
 
 .container-width {
