arreglos de diseño de los modales de cinema

--- a/resources/sass/atoms/_input.scss
+++ b/resources/sass/atoms/_input.scss
@@ -737,3 +737,6 @@ div .bootstrap-select>.dropdown-toggle:focus {
 .input-title-cinema{
     background-color:$black-two;
 }
+.input-border{
+    border-radius: 8px !important;
+}
